Fix font of landing page on firefox.

--- a/styles/style.css
+++ b/styles/style.css
@@ -204,7 +204,7 @@ file. These definitions will be defined mobile first.
         justify-content: center;
         padding-left: 10%;
         color: #f5f5f5;
-        font-family: system-ui;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     }
 
     @media (max-height:850px) {
@@ -263,7 +263,6 @@ file. These definitions will be defined mobile first.
         padding: 0.9em 2.5em;
         display: flex;
         align-items: center;
-        font-family: system-ui;
         font-size: 1em;
         transition: color 0.25s;
         background-color: #24788f;
